[package]
name = "simple_http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
request = { path = "src/request" }
response = { path = "src/response" }
thread_pool = { path = "src/thread_pool" }
methods = { path = "src/methods" }
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
